# shijinze-copy

./: CLAUDE.md  GitHub构建流程.md  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts  本地运行与打包.md
.github/workflows/: build-windows.yml  build.yml
src/: main.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  lib.rs  models.rs  settings.rs  source_app.rs  sync.rs
